# parachain-template

./: Cargo.toml  zombienet.toml
node/: Cargo.toml
pallets/test_pallet1/: Cargo.toml
pallets/test_pallet1/src/: lib.rs  mock.rs  tests.rs
